fixes properties on dark mode toggle

--- a/css/app.css
+++ b/css/app.css
@@ -58,7 +58,7 @@ html {
   }
 
   .nav-menu {
-    @apply list-none w-full transition duration-200 fixed -translate-y-[120%] top-10 left-0 bg-zinc-100 text-gray-700 py-4 z-40 lg:z-0 lg:w-auto lg:relative lg:translate-y-0 lg:top-0 lg:inline-flex lg:bg-transparent lg:mr-8;
+    @apply list-none w-full fixed -translate-y-[120%] top-10 left-0 bg-zinc-100 text-gray-700 py-4 z-40 lg:z-0 lg:w-auto lg:relative lg:translate-y-0 lg:top-0 lg:inline-flex lg:bg-transparent lg:mr-8;
   }
   /* End Navbar */
 
@@ -236,7 +236,7 @@ html {
 
   /* Project Section */
   .project {
-    @apply my-8 bg-white;
+    @apply py-8;
   }
 
   .project-wrapper {
@@ -330,13 +330,15 @@ html {
   }
 
   .dark,
-  .dark .navbar,
   .dark .navbar.fixed-nav,
-  .dark .nav-menu,
   .dark .project,
   .dark .skills,
   .dark .footer {
     @apply bg-zinc-800;
+  }
+
+  .dark .nav-menu {
+    @apply bg-zinc-800 lg:bg-transparent;
   }
 
   .dark .about,
